[package]
name = "ntf"
version = "0.1.0"
authors = ["ccoder64 <ccoder64@hotmail.com>"]
repository = "https://github.com/ccoder64/ntf.git"
readme = "README.md"
license = "MIT"
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
stderrlog = "0.5"
toml = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11", features = ["blocking", "json"]}
